# Freecad_GFPlus_Workbench

./: .gitignore  AGENTS.md  LICENSE  README.md
.agents/rules/: no_silent_exceptions.md
.agents/workflows/: fix-task.md
GridifintyPlusWorkbench/: CMakeLists.txt  INDEX.md  MANIFEST.in  README.md  pyproject.toml  setup.py
GridifintyPlusWorkbench/.agents/rules/: scopecontrol.md
GridifintyPlusWorkbench/.agents/skills/gfplus_code_review/: SKILL.md
GridifintyPlusWorkbench/.agents/skills/gfplus_command_pattern/: SKILL.md
GridifintyPlusWorkbench/.agents/skills/gfplus_freecad_env/: SKILL.md
GridifintyPlusWorkbench/.agents/skills/gfplus_logging/: SKILL.md
GridifintyPlusWorkbench/.agents/skills/gfplus_template_loading/: SKILL.md
GridifintyPlusWorkbench/.agents/skills/gfplus_todo_format/: SKILL.md
GridifintyPlusWorkbench/.agents/skills/update_index/: SKILL.md
GridifintyPlusWorkbench/freecad/gridfinity_plus_workbench/: BinFusion.py  BulkExport.py  BulkExportTaskPanel.py  CreateBaseplate.py  CreateBaseplateTaskPanel.py  CreateBin.py  CreateBinTaskPanel.py  CreateTabs.py  CreateTabsTaskPanel.py  LayoutBins.py  LayoutBinsTaskPanel.py  init_gui.py
GridifintyPlusWorkbench/freecad/gridfinity_plus_workbench/resources/: GF+BinTemplate.FCStd  GF+TabConnectorTemplate.FCStd  GF+TabTemplate.FCStd  Gridfinity+Base_Cell.FCStd  Gridfinity+Base_Template.FCStd  Gridfinity+Base_Template_DEP.FCStd
GridifintyPlusWorkbench/freecad/gridfinity_plus_workbench/resources/icons/: Icons.txt
GridifintyPlusWorkbench/freecad/gridfinity_plus_workbench/resources/translations/: README.md  update_translation.sh
freecad/gridfinity_plus_workbench/: CreateBaseplate.py  init_gui.py
freecad/gridfinity_plus_workbench/resources/: GF+BlankTemplate.FCStd  GF+TabTemplate.FCStd  Gridfinity+Base_Template.FCStd
gridfinity_plus_workbench/: CreateBaseplate.py  CreateBin.py
gridfinity_plus_workbench/resources/: Gridfinity+Base_Template - Copy.FCStd  Gridfinity+Base_Template.FCStd
(+1 files in other folders)
