# References: 
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# https://packaging.python.org/en/latest/guides/packaging-namespace-packages/#native-namespace-packages
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad.gridfinity_plus_workbench"
dynamic = ["version"]
description = "GridifintyPlusWorkbench does something cool."
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    {name = "me", email = "me@foobar.com"
    },
]
requires-python = ">=3.8"
dependencies = ["'numpy',"]

[project.urls]
source = "https://foobar.com/me/coolWB"

[tool.setuptools]
packages = ["freecad", "freecad.gridfinity_plus_workbench"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "freecad.gridfinity_plus_workbench.__version__"}